fixing display on mobile device

--- a/src/components/style.css
+++ b/src/components/style.css
@@ -13,6 +13,7 @@
 
 .coluna {
   background:white;
+  word-break: break-all
 }
 
 .bold { 
